# csv-pdf-reportgen

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: projektplan_csv_pdf_reportgen.md
examples/: csv-pdf-pipeline.csv  minimal.csv
src/reportgen/: __main__.py  cli.py  csv_loader.py  pipeline.py  validator.py
templates/minimal/: template.html
templates/table/: template.html
tests/: test_csv_loader.py  test_pipeline_e2e.py  test_smoke.py
